--- a/_posts/2017-07-27-test-post.markdown
+++ b/_posts/2017-07-27-test-post.markdown
@@ -1,7 +1,9 @@
 ---
 layout: post
-title:  "Test Post"
+title:  "DATANAB.NET - number database"
 date:   2017-07-27 14:55:57 -0700
-categories: jekyll update
+categories: website
 ---
-Test Body
+I've finished the bulk of the programming for my website [Datanab.net][data] where you can view the number database I've created. I also have a unit converter and there are plans to add population statistics to the website. All the information is contained on its own JSON page.
+
+[data]: https://www.datanab.net
